it does something

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import AutoTokenizer, AutoModelForMaskedLM\n",
-    "from tqdm import tqdm"
+    "from transformers import AutoTokenizer, AutoModelForMaskedLM, RobertaForQuestionAnswering\n",
+    "from transformers import pipeline\n",
+    "from tqdm import tqdm\n",
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:10<00:00,  5.18s/it]\n"
+      "  0%|          | 0/2 [00:00<?, ?it/s]Some weights of the model checkpoint at uklfr/gottbert-base were not used when initializing RobertaForQuestionAnswering: ['lm_head.bias', 'lm_head.dense.weight', 'lm_head.dense.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.decoder.bias', 'lm_head.layer_norm.bias']\n",
+      "- This IS expected if you are initializing RobertaForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of RobertaForQuestionAnswering were not initialized from the model checkpoint at uklfr/gottbert-base and are newly initialized: ['qa_outputs.bias', 'qa_outputs.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      " 50%|█████     | 1/2 [00:05<00:05,  5.35s/it]Some weights of the model checkpoint at pdelobelle/robbert-v2-dutch-base were not used when initializing RobertaForQuestionAnswering: ['lm_head.bias', 'lm_head.dense.weight', 'lm_head.dense.bias', 'lm_head.decoder.weight', 'lm_head.layer_norm.weight', 'lm_head.decoder.bias', 'lm_head.layer_norm.bias']\n",
+      "- This IS expected if you are initializing RobertaForQuestionAnswering from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForQuestionAnswering from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of RobertaForQuestionAnswering were not initialized from the model checkpoint at pdelobelle/robbert-v2-dutch-base and are newly initialized: ['qa_outputs.bias', 'qa_outputs.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "100%|██████████| 2/2 [00:10<00:00,  5.09s/it]\n"
      ]
     }
    ],
@@ -59,20 +71,88 @@
     "for language, model in tqdm(models.items()):\n",
     "    # get model & tokenizer from huggingface\n",
     "    model.set_tokenizer(AutoTokenizer.from_pretrained(model.name))\n",
-    "    model.set_model(AutoModelForMaskedLM.from_pretrained(model.name))\n"
+    "    model.set_model(RobertaForQuestionAnswering.from_pretrained(model.name))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load datasets\n",
+    "%%capture\n",
+    "\n",
+    "from datasets import load_dataset\n",
+    "\n",
     "datasets = {\n",
-    "    \"de\": \"\",\n",
-    "    \n",
+    "    \"de\" : load_dataset(\"xquad\", \"xquad.de\"),\n",
+    "    \"es\" : load_dataset(\"xquad\", \"xquad.es\"),\n",
+    "    \"en\" : load_dataset(\"xquad\", \"xquad.en\"),\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    validation: Dataset({\n",
+       "        features: ['id', 'context', 'question', 'answers'],\n",
+       "        num_rows: 1190\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datasets[\"de\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipelines = {\n",
+    "    \"de\": pipeline(\"question-answering\", model=models[\"de\"].model, tokenizer=models[\"de\"].tokenizer),\n",
+    "    \"nl\": pipeline(\"question-answering\", model=models[\"nl\"].model, tokenizer=models[\"nl\"].tokenizer),\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'score': 2.438506817270536e-05, 'start': 1063, 'end': 1075, 'answer': 'Karrierehoch'}\n",
+      "{'score': 2.9517095754272304e-05, 'start': 1283, 'end': 1298, 'answer': 'también jugador'}\n",
+      "{'score': 3.348920654389076e-05, 'start': 414, 'end': 420, 'answer': 'bowler'}\n",
+      "{'score': 5.6197415688075125e-05, 'start': 903, 'end': 931, 'answer': 'Tackles anführte (118), zwei'}\n",
+      "{'score': 2.9597707907669246e-05, 'start': 1283, 'end': 1290, 'answer': 'también'}\n",
+      "{'score': 2.5089304472203366e-05, 'start': 421, 'end': 445, 'answer': \"who was the NFL's active\"}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for language, pipeline in pipelines.items():\n",
+    "    for language, dataset in datasets.items():\n",
+    "        res = pipeline({\"question\": dataset[\"validation\"][\"question\"][0]\n",
+    "                , \"context\": dataset[\"validation\"][\"context\"][0]})\n",
+    "        print(res)\n",
+    "            "
    ]
   }
  ],
